--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>This is Akash's Website modified on date 9th Oct 2019 using CI/CD pipeline....</h1>
+<h1>This is Akash's Website modified on date 9th Oct 2019 using CI/CD pipeline.....</h1>
