--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>This is Akash's Website modified on date 9th Oct 2019 using CI/CD pipeline is now succesful</h1>
+<h1>This is Akash's Website modified on date 9th Oct 2019 using CI/CD pipeline is getting succesfull now</h1>
